[package]
name = "int_hashmap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.5.0"
memoffset = "0.9.0"
dyn_array = { git = "https://github.com/GumGun-rust/dyn_array" }
int_ll = { git = "https://github.com/GumGun-rust/LinkedList_intrusive" }
static_assertions = "1.1.0"


[dev-dependencies]

